--- a/PyCitySchools/Homework_04-Pandas_Instructions_PyCitySchools_PyCitySchools_starter.ipynb
+++ b/PyCitySchools/Homework_04-Pandas_Instructions_PyCitySchools_PyCitySchools_starter.ipynb
@@ -191,9 +191,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24649428\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -230,7 +237,7 @@
        "      <th>0</th>\n",
        "      <td>15</td>\n",
        "      <td>39170</td>\n",
-       "      <td>$82,932,329,558</td>\n",
+       "      <td>$24,649,428</td>\n",
        "      <td>78.985371</td>\n",
        "      <td>81.87784</td>\n",
        "      <td>74.980853</td>\n",
@@ -242,14 +249,14 @@
        "</div>"
       ],
       "text/plain": [
-       "   Total Schools  Total Students     Total Budget  Average Math Score  \\\n",
-       "0             15           39170  $82,932,329,558           78.985371   \n",
+       "   Total Schools  Total Students Total Budget  Average Math Score  \\\n",
+       "0             15           39170  $24,649,428           78.985371   \n",
        "\n",
        "   Average Reading Score  % Passing Math  % Passing Reading  % Passing Overall  \n",
        "0               81.87784       74.980853          85.805463          65.172326  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,8 +271,8 @@
     "#print(num_students)\n",
     "\n",
     "#calc total budget\n",
-    "tot_budget = fd.budget.sum()\n",
-    "#print(tot_budget)\n",
+    "tot_budget = fd.budget.unique().sum()\n",
+    "print(tot_budget)\n",
     "\n",
     "#calc avg math score\n",
     "avg_math = fd.math_score.mean()\n",
@@ -335,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -359,10 +366,10 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>School Type</th>\n",
+       "      <th>school_name</th>\n",
+       "      <th>type</th>\n",
        "      <th>Total Students</th>\n",
-       "      <th>Total School Budget</th>\n",
-       "      <th>Per Student Budget</th>\n",
+       "      <th>budget</th>\n",
        "      <th>Average Math Score</th>\n",
        "      <th>Average Reading Score</th>\n",
        "      <th>% Passing Math</th>\n",
@@ -372,11 +379,11 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Bailey High School</th>\n",
+       "      <th>0</th>\n",
+       "      <td>Bailey High School</td>\n",
        "      <td>District</td>\n",
        "      <td>4976</td>\n",
-       "      <td>$3,124,928.00</td>\n",
-       "      <td>$628.00</td>\n",
+       "      <td>3124928</td>\n",
        "      <td>77.048432</td>\n",
        "      <td>81.033963</td>\n",
        "      <td>66.680064</td>\n",
@@ -384,11 +391,11 @@
        "      <td>54.642283</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Cabrera High School</th>\n",
+       "      <th>1</th>\n",
+       "      <td>Cabrera High School</td>\n",
        "      <td>Charter</td>\n",
        "      <td>1858</td>\n",
-       "      <td>$1,081,356.00</td>\n",
-       "      <td>$582.00</td>\n",
+       "      <td>1081356</td>\n",
        "      <td>83.061895</td>\n",
        "      <td>83.975780</td>\n",
        "      <td>94.133477</td>\n",
@@ -396,11 +403,11 @@
        "      <td>91.334769</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Figueroa High School</th>\n",
+       "      <th>2</th>\n",
+       "      <td>Figueroa High School</td>\n",
        "      <td>District</td>\n",
        "      <td>2949</td>\n",
-       "      <td>$1,884,411.00</td>\n",
-       "      <td>$639.00</td>\n",
+       "      <td>1884411</td>\n",
        "      <td>76.711767</td>\n",
        "      <td>81.158020</td>\n",
        "      <td>65.988471</td>\n",
@@ -408,11 +415,11 @@
        "      <td>53.204476</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Ford High School</th>\n",
+       "      <th>3</th>\n",
+       "      <td>Ford High School</td>\n",
        "      <td>District</td>\n",
        "      <td>2739</td>\n",
-       "      <td>$1,763,916.00</td>\n",
-       "      <td>$644.00</td>\n",
+       "      <td>1763916</td>\n",
        "      <td>77.102592</td>\n",
        "      <td>80.746258</td>\n",
        "      <td>68.309602</td>\n",
@@ -420,217 +427,101 @@
        "      <td>54.289887</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Griffin High School</th>\n",
+       "      <th>4</th>\n",
+       "      <td>Griffin High School</td>\n",
        "      <td>Charter</td>\n",
        "      <td>1468</td>\n",
-       "      <td>$917,500.00</td>\n",
-       "      <td>$625.00</td>\n",
+       "      <td>917500</td>\n",
        "      <td>83.351499</td>\n",
        "      <td>83.816757</td>\n",
        "      <td>93.392371</td>\n",
        "      <td>97.138965</td>\n",
        "      <td>90.599455</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Hernandez High School</th>\n",
-       "      <td>District</td>\n",
-       "      <td>4635</td>\n",
-       "      <td>$3,022,020.00</td>\n",
-       "      <td>$652.00</td>\n",
-       "      <td>77.289752</td>\n",
-       "      <td>80.934412</td>\n",
-       "      <td>66.752967</td>\n",
-       "      <td>80.862999</td>\n",
-       "      <td>53.527508</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Holden High School</th>\n",
-       "      <td>Charter</td>\n",
-       "      <td>427</td>\n",
-       "      <td>$248,087.00</td>\n",
-       "      <td>$581.00</td>\n",
-       "      <td>83.803279</td>\n",
-       "      <td>83.814988</td>\n",
-       "      <td>92.505855</td>\n",
-       "      <td>96.252927</td>\n",
-       "      <td>89.227166</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Huang High School</th>\n",
-       "      <td>District</td>\n",
-       "      <td>2917</td>\n",
-       "      <td>$1,910,635.00</td>\n",
-       "      <td>$655.00</td>\n",
-       "      <td>76.629414</td>\n",
-       "      <td>81.182722</td>\n",
-       "      <td>65.683922</td>\n",
-       "      <td>81.316421</td>\n",
-       "      <td>53.513884</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Johnson High School</th>\n",
-       "      <td>District</td>\n",
-       "      <td>4761</td>\n",
-       "      <td>$3,094,650.00</td>\n",
-       "      <td>$650.00</td>\n",
-       "      <td>77.072464</td>\n",
-       "      <td>80.966394</td>\n",
-       "      <td>66.057551</td>\n",
-       "      <td>81.222432</td>\n",
-       "      <td>53.539172</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Pena High School</th>\n",
-       "      <td>Charter</td>\n",
-       "      <td>962</td>\n",
-       "      <td>$585,858.00</td>\n",
-       "      <td>$609.00</td>\n",
-       "      <td>83.839917</td>\n",
-       "      <td>84.044699</td>\n",
-       "      <td>94.594595</td>\n",
-       "      <td>95.945946</td>\n",
-       "      <td>90.540541</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Rodriguez High School</th>\n",
-       "      <td>District</td>\n",
-       "      <td>3999</td>\n",
-       "      <td>$2,547,363.00</td>\n",
-       "      <td>$637.00</td>\n",
-       "      <td>76.842711</td>\n",
-       "      <td>80.744686</td>\n",
-       "      <td>66.366592</td>\n",
-       "      <td>80.220055</td>\n",
-       "      <td>52.988247</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Shelton High School</th>\n",
-       "      <td>Charter</td>\n",
-       "      <td>1761</td>\n",
-       "      <td>$1,056,600.00</td>\n",
-       "      <td>$600.00</td>\n",
-       "      <td>83.359455</td>\n",
-       "      <td>83.725724</td>\n",
-       "      <td>93.867121</td>\n",
-       "      <td>95.854628</td>\n",
-       "      <td>89.892107</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Thomas High School</th>\n",
-       "      <td>Charter</td>\n",
-       "      <td>1635</td>\n",
-       "      <td>$1,043,130.00</td>\n",
-       "      <td>$638.00</td>\n",
-       "      <td>83.418349</td>\n",
-       "      <td>83.848930</td>\n",
-       "      <td>93.272171</td>\n",
-       "      <td>97.308869</td>\n",
-       "      <td>90.948012</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Wilson High School</th>\n",
-       "      <td>Charter</td>\n",
-       "      <td>2283</td>\n",
-       "      <td>$1,319,574.00</td>\n",
-       "      <td>$578.00</td>\n",
-       "      <td>83.274201</td>\n",
-       "      <td>83.989488</td>\n",
-       "      <td>93.867718</td>\n",
-       "      <td>96.539641</td>\n",
-       "      <td>90.582567</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Wright High School</th>\n",
-       "      <td>Charter</td>\n",
-       "      <td>1800</td>\n",
-       "      <td>$1,049,400.00</td>\n",
-       "      <td>$583.00</td>\n",
-       "      <td>83.682222</td>\n",
-       "      <td>83.955000</td>\n",
-       "      <td>93.333333</td>\n",
-       "      <td>96.611111</td>\n",
-       "      <td>90.333333</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                      School Type  Total Students Total School Budget  \\\n",
-       "Bailey High School       District            4976       $3,124,928.00   \n",
-       "Cabrera High School       Charter            1858       $1,081,356.00   \n",
-       "Figueroa High School     District            2949       $1,884,411.00   \n",
-       "Ford High School         District            2739       $1,763,916.00   \n",
-       "Griffin High School       Charter            1468         $917,500.00   \n",
-       "Hernandez High School    District            4635       $3,022,020.00   \n",
-       "Holden High School        Charter             427         $248,087.00   \n",
-       "Huang High School        District            2917       $1,910,635.00   \n",
-       "Johnson High School      District            4761       $3,094,650.00   \n",
-       "Pena High School          Charter             962         $585,858.00   \n",
-       "Rodriguez High School    District            3999       $2,547,363.00   \n",
-       "Shelton High School       Charter            1761       $1,056,600.00   \n",
-       "Thomas High School        Charter            1635       $1,043,130.00   \n",
-       "Wilson High School        Charter            2283       $1,319,574.00   \n",
-       "Wright High School        Charter            1800       $1,049,400.00   \n",
+       "            school_name      type  Total Students   budget  \\\n",
+       "0    Bailey High School  District            4976  3124928   \n",
+       "1   Cabrera High School   Charter            1858  1081356   \n",
+       "2  Figueroa High School  District            2949  1884411   \n",
+       "3      Ford High School  District            2739  1763916   \n",
+       "4   Griffin High School   Charter            1468   917500   \n",
        "\n",
-       "                      Per Student Budget  Average Math Score  \\\n",
-       "Bailey High School               $628.00           77.048432   \n",
-       "Cabrera High School              $582.00           83.061895   \n",
-       "Figueroa High School             $639.00           76.711767   \n",
-       "Ford High School                 $644.00           77.102592   \n",
-       "Griffin High School              $625.00           83.351499   \n",
-       "Hernandez High School            $652.00           77.289752   \n",
-       "Holden High School               $581.00           83.803279   \n",
-       "Huang High School                $655.00           76.629414   \n",
-       "Johnson High School              $650.00           77.072464   \n",
-       "Pena High School                 $609.00           83.839917   \n",
-       "Rodriguez High School            $637.00           76.842711   \n",
-       "Shelton High School              $600.00           83.359455   \n",
-       "Thomas High School               $638.00           83.418349   \n",
-       "Wilson High School               $578.00           83.274201   \n",
-       "Wright High School               $583.00           83.682222   \n",
+       "   Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "0           77.048432              81.033963       66.680064   \n",
+       "1           83.061895              83.975780       94.133477   \n",
+       "2           76.711767              81.158020       65.988471   \n",
+       "3           77.102592              80.746258       68.309602   \n",
+       "4           83.351499              83.816757       93.392371   \n",
        "\n",
-       "                       Average Reading Score  % Passing Math  \\\n",
-       "Bailey High School                 81.033963       66.680064   \n",
-       "Cabrera High School                83.975780       94.133477   \n",
-       "Figueroa High School               81.158020       65.988471   \n",
-       "Ford High School                   80.746258       68.309602   \n",
-       "Griffin High School                83.816757       93.392371   \n",
-       "Hernandez High School              80.934412       66.752967   \n",
-       "Holden High School                 83.814988       92.505855   \n",
-       "Huang High School                  81.182722       65.683922   \n",
-       "Johnson High School                80.966394       66.057551   \n",
-       "Pena High School                   84.044699       94.594595   \n",
-       "Rodriguez High School              80.744686       66.366592   \n",
-       "Shelton High School                83.725724       93.867121   \n",
-       "Thomas High School                 83.848930       93.272171   \n",
-       "Wilson High School                 83.989488       93.867718   \n",
-       "Wright High School                 83.955000       93.333333   \n",
-       "\n",
-       "                       % Passing Reading  % Overall Passing  \n",
-       "Bailey High School             81.933280          54.642283  \n",
-       "Cabrera High School            97.039828          91.334769  \n",
-       "Figueroa High School           80.739234          53.204476  \n",
-       "Ford High School               79.299014          54.289887  \n",
-       "Griffin High School            97.138965          90.599455  \n",
-       "Hernandez High School          80.862999          53.527508  \n",
-       "Holden High School             96.252927          89.227166  \n",
-       "Huang High School              81.316421          53.513884  \n",
-       "Johnson High School            81.222432          53.539172  \n",
-       "Pena High School               95.945946          90.540541  \n",
-       "Rodriguez High School          80.220055          52.988247  \n",
-       "Shelton High School            95.854628          89.892107  \n",
-       "Thomas High School             97.308869          90.948012  \n",
-       "Wilson High School             96.539641          90.582567  \n",
-       "Wright High School             96.611111          90.333333  "
+       "   % Passing Reading  % Overall Passing  \n",
+       "0          81.933280          54.642283  \n",
+       "1          97.039828          91.334769  \n",
+       "2          80.739234          53.204476  \n",
+       "3          79.299014          54.289887  \n",
+       "4          97.138965          90.599455  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "constants = fd[[\"school_name\", \"type\", \"budget\"]].drop_duplicates()\n",
+    "constants = constants.rename({\n",
+    "    \"type\": \"School Type\",\n",
+    "    \"budget\": \"Total School Budget\"\n",
+    "})\n",
+    "#print(constants.shape)\n",
+    "\n",
+    "grouped = fd.groupby([\"school_name\"]).agg({\n",
+    "    \"student_name\": \"count\",\n",
+    "    \"math_score\": \"mean\",\n",
+    "    \"reading_score\": \"mean\"    \n",
+    "})\n",
+    "grouped = grouped.rename(columns = {\n",
+    "    \"student_name\": \"Total Students\",\n",
+    "    \"math_score\": \"Average Math Score\",\n",
+    "    \"reading_score\" : \"Average Reading Score\"\n",
+    "})\n",
+    "#print(grouped.head())\n",
+    "\n",
+    "passedMath = passing_math.groupby(\"school_name\").agg({\n",
+    "    \"student_name\": \"count\"\n",
+    "})\n",
+    "passedMath = passedMath.rename(columns = {\"student_name\": \"#Math\"})\n",
+    "#print(passedMath.head())\n",
+    "\n",
+    "passedReading = passing_reading.groupby(\"school_name\").agg({\n",
+    "    \"student_name\": \"count\"\n",
+    "})\n",
+    "passedReading = passedReading.rename(columns = {\"student_name\": \"#Reading\"})\n",
+    "#print(passedReading.head())\n",
+    "\n",
+    "passedOverall = passing_ovr.groupby(\"school_name\").agg({\n",
+    "    \"student_name\": \"count\"\n",
+    "})\n",
+    "passedOverall = passedOverall.rename(columns = {\"student_name\": \"#Overall\"})\n",
+    "#print(passedOverall.head())\n",
+    "\n",
+    "fullData = pd.merge(grouped, passedMath, how=\"left\", on=[\"school_name\"])\n",
+    "fullData = pd.merge(fullData, passedReading, how=\"left\", on=[\"school_name\"])\n",
+    "fullData = pd.merge(fullData, passedOverall, how=\"left\", on=[\"school_name\"])\n",
+    "fullData = pd.merge(fullData, constants, how=\"left\", on=[\"school_name\"])\n",
+    "fullData[\"% Passing Math\"] = (fullData[\"#Math\"] / fullData[\"Total Students\"]) *100\n",
+    "fullData[\"% Passing Reading\"] = (fullData[\"#Reading\"] / fullData[\"Total Students\"]) *100\n",
+    "fullData[\"% Overall Passing\"] = (fullData[\"#Overall\"] / fullData[\"Total Students\"]) *100\n",
+    "fullData.set_index(\"school_name\")\n",
+    "#fullData.head()\n",
+    "\n",
+    "finalData = fullData[[\"school_name\",\"type\",\"Total Students\", \"budget\", \"Average Math Score\",\n",
+    "                      \"Average Reading Score\", \"% Passing Math\", \"% Passing Reading\", \"% Overall Passing\"]]\n",
+    "finalData.head()"
+   ]
   },
   {
    "cell_type": "markdown",
