--- a/PyCitySchools/Homework_04-Pandas_Instructions_PyCitySchools_PyCitySchools_starter.ipynb
+++ b/PyCitySchools/Homework_04-Pandas_Instructions_PyCitySchools_PyCitySchools_starter.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        "4             97          84          0  District  2917  1910635  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
        "0               81.87784       74.980853          85.805463          65.172326  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -366,24 +366,36 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>school_name</th>\n",
-       "      <th>type</th>\n",
+       "      <th>School Type</th>\n",
        "      <th>Total Students</th>\n",
-       "      <th>budget</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
        "      <th>Average Math Score</th>\n",
        "      <th>Average Reading Score</th>\n",
        "      <th>% Passing Math</th>\n",
        "      <th>% Passing Reading</th>\n",
        "      <th>% Overall Passing</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>school_name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Bailey High School</td>\n",
+       "      <th>Bailey High School</th>\n",
        "      <td>District</td>\n",
        "      <td>4976</td>\n",
        "      <td>3124928</td>\n",
+       "      <td>628.0</td>\n",
        "      <td>77.048432</td>\n",
        "      <td>81.033963</td>\n",
        "      <td>66.680064</td>\n",
@@ -391,11 +403,11 @@
        "      <td>54.642283</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Cabrera High School</td>\n",
+       "      <th>Cabrera High School</th>\n",
        "      <td>Charter</td>\n",
        "      <td>1858</td>\n",
        "      <td>1081356</td>\n",
+       "      <td>582.0</td>\n",
        "      <td>83.061895</td>\n",
        "      <td>83.975780</td>\n",
        "      <td>94.133477</td>\n",
@@ -403,11 +415,11 @@
        "      <td>91.334769</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Figueroa High School</td>\n",
+       "      <th>Figueroa High School</th>\n",
        "      <td>District</td>\n",
        "      <td>2949</td>\n",
        "      <td>1884411</td>\n",
+       "      <td>639.0</td>\n",
        "      <td>76.711767</td>\n",
        "      <td>81.158020</td>\n",
        "      <td>65.988471</td>\n",
@@ -415,11 +427,11 @@
        "      <td>53.204476</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Ford High School</td>\n",
+       "      <th>Ford High School</th>\n",
        "      <td>District</td>\n",
        "      <td>2739</td>\n",
        "      <td>1763916</td>\n",
+       "      <td>644.0</td>\n",
        "      <td>77.102592</td>\n",
        "      <td>80.746258</td>\n",
        "      <td>68.309602</td>\n",
@@ -427,11 +439,11 @@
        "      <td>54.289887</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Griffin High School</td>\n",
+       "      <th>Griffin High School</th>\n",
        "      <td>Charter</td>\n",
        "      <td>1468</td>\n",
        "      <td>917500</td>\n",
+       "      <td>625.0</td>\n",
        "      <td>83.351499</td>\n",
        "      <td>83.816757</td>\n",
        "      <td>93.392371</td>\n",
@@ -443,29 +455,40 @@
        "</div>"
       ],
       "text/plain": [
-       "            school_name      type  Total Students   budget  \\\n",
-       "0    Bailey High School  District            4976  3124928   \n",
-       "1   Cabrera High School   Charter            1858  1081356   \n",
-       "2  Figueroa High School  District            2949  1884411   \n",
-       "3      Ford High School  District            2739  1763916   \n",
-       "4   Griffin High School   Charter            1468   917500   \n",
+       "                     School Type  Total Students  Total School Budget  \\\n",
+       "school_name                                                             \n",
+       "Bailey High School      District            4976              3124928   \n",
+       "Cabrera High School      Charter            1858              1081356   \n",
+       "Figueroa High School    District            2949              1884411   \n",
+       "Ford High School        District            2739              1763916   \n",
+       "Griffin High School      Charter            1468               917500   \n",
        "\n",
-       "   Average Math Score  Average Reading Score  % Passing Math  \\\n",
-       "0           77.048432              81.033963       66.680064   \n",
-       "1           83.061895              83.975780       94.133477   \n",
-       "2           76.711767              81.158020       65.988471   \n",
-       "3           77.102592              80.746258       68.309602   \n",
-       "4           83.351499              83.816757       93.392371   \n",
+       "                      Per Student Budget  Average Math Score  \\\n",
+       "school_name                                                    \n",
+       "Bailey High School                 628.0           77.048432   \n",
+       "Cabrera High School                582.0           83.061895   \n",
+       "Figueroa High School               639.0           76.711767   \n",
+       "Ford High School                   644.0           77.102592   \n",
+       "Griffin High School                625.0           83.351499   \n",
        "\n",
-       "   % Passing Reading  % Overall Passing  \n",
-       "0          81.933280          54.642283  \n",
-       "1          97.039828          91.334769  \n",
-       "2          80.739234          53.204476  \n",
-       "3          79.299014          54.289887  \n",
-       "4          97.138965          90.599455  "
+       "                      Average Reading Score  % Passing Math  \\\n",
+       "school_name                                                   \n",
+       "Bailey High School                81.033963       66.680064   \n",
+       "Cabrera High School               83.975780       94.133477   \n",
+       "Figueroa High School              81.158020       65.988471   \n",
+       "Ford High School                  80.746258       68.309602   \n",
+       "Griffin High School               83.816757       93.392371   \n",
+       "\n",
+       "                      % Passing Reading  % Overall Passing  \n",
+       "school_name                                                 \n",
+       "Bailey High School            81.933280          54.642283  \n",
+       "Cabrera High School           97.039828          91.334769  \n",
+       "Figueroa High School          80.739234          53.204476  \n",
+       "Ford High School              79.299014          54.289887  \n",
+       "Griffin High School           97.138965          90.599455  "
       ]
      },
-     "execution_count": 164,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,14 +535,21 @@
     "fullData = pd.merge(fullData, passedReading, how=\"left\", on=[\"school_name\"])\n",
     "fullData = pd.merge(fullData, passedOverall, how=\"left\", on=[\"school_name\"])\n",
     "fullData = pd.merge(fullData, constants, how=\"left\", on=[\"school_name\"])\n",
+    "fullData[\"Per Student Budget\"] = (fullData[\"budget\"] / fullData[\"Total Students\"])\n",
     "fullData[\"% Passing Math\"] = (fullData[\"#Math\"] / fullData[\"Total Students\"]) *100\n",
     "fullData[\"% Passing Reading\"] = (fullData[\"#Reading\"] / fullData[\"Total Students\"]) *100\n",
     "fullData[\"% Overall Passing\"] = (fullData[\"#Overall\"] / fullData[\"Total Students\"]) *100\n",
-    "fullData.set_index(\"school_name\")\n",
+    "#fullData.set_index(\"school_name\")\n",
     "#fullData.head()\n",
     "\n",
-    "finalData = fullData[[\"school_name\",\"type\",\"Total Students\", \"budget\", \"Average Math Score\",\n",
+    "finalData = fullData[[\"school_name\",\"type\",\"Total Students\", \"budget\",\"Per Student Budget\", \"Average Math Score\",\n",
     "                      \"Average Reading Score\", \"% Passing Math\", \"% Passing Reading\", \"% Overall Passing\"]]\n",
+    "finalData = finalData.set_index(\"school_name\")\n",
+    "\n",
+    "finalData = finalData.rename(columns = {\n",
+    "    \"type\":\"School Type\",\n",
+    "    \"budget\": \"Total School Budget\"\n",
+    "})\n",
     "finalData.head()"
    ]
   },
